<resources>
    <string name="app_name">Shopping List to Buy</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item">Enter Item</string>
    <string name="quantity">Quantity</string>
    <string name="Categories">Categories:</string>
    <string name="price">Price</string>
    <string name="produced">Produced</string>
    <string name="Added_on">Added on:</string>
    <string name="kg_liter">kg, liter</string>
    <string name="kg">kg</string>
    <string name="country">Country</string>
    <string name="city">city</string>
    <string name="Shopping_List">Shopping List to Buy</string>
    <string name="shopping_list">Shopping List to Buy</string>
    <string name="update">Update</string>
    <string name="add_item">Add Item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Strings used for fragments for navigation -->


</resources>
